Grace/tests/gibbs/errors/t078.grace
// ERROR = P1036
var negativeNumber := -()
